[gd_scene load_steps=9 format=2]

[ext_resource path="res://main_menu/buttons/select_music_btn.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/main/filler_bg.png" type="Texture" id=2]
[ext_resource path="res://assets/main/title.png" type="Texture" id=3]
[ext_resource path="res://main_menu/buttons/exit_btn.tscn" type="PackedScene" id=4]
[ext_resource path="res://main_menu/buttons/view_score_btn.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/others/m04b.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://main_menu/scripts/main_menu_script.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 6 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuElements" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 30.0
margin_right = 1160.0
margin_bottom = 680.0
custom_constants/separation = 62
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="MainMenuElements"]
margin_right = 1040.0
margin_bottom = 180.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Buttons" type="VBoxContainer" parent="MainMenuElements"]
margin_top = 242.0
margin_right = 1040.0
margin_bottom = 580.0
custom_constants/separation = 40
alignment = 1

[node name="SelectMusic" parent="MainMenuElements/Buttons" instance=ExtResource( 1 )]
margin_right = 704.0

[node name="ViewScore" parent="MainMenuElements/Buttons" instance=ExtResource( 5 )]
margin_top = 126.0
margin_right = 704.0
margin_bottom = 212.0

[node name="Exit" parent="MainMenuElements/Buttons" instance=ExtResource( 4 )]
margin_top = 252.0
margin_right = 704.0
margin_bottom = 338.0

[node name="Label" type="Label" parent="."]
margin_left = 60.0
margin_top = 680.0
margin_right = 1160.0
margin_bottom = 694.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Group 2 - Crisostomo, Cunanan, Judal, Razal"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MainMenuElements/Buttons/SelectMusic" to="." method="_on_SelectMusic_pressed"]
[connection signal="pressed" from="MainMenuElements/Buttons/ViewScore" to="." method="_on_ViewScore_pressed"]
[connection signal="pressed" from="MainMenuElements/Buttons/Exit" to="." method="_on_Exit_pressed"]
